[package]
name = "celestial_convergence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "celestial_convergence"

[dependencies]
ron = "0.8"
serde = { version = "1", features = ["derive"] }
